@@ -1,3 +1,11 @@
+2004-11-19  Nick Clifton  <nickc@redhat.com>
+	* lib/libgloss.exp (newlib_include_flags): Document why -isystem
+    	is used instead of -I.
+	(libio_include_flags): Use -I instead of -isystem and
+	document why.
+	(g++_include_flags): Use -I instead of -isystem.
+	(libstdc++_include_flags): Likewise. 
+
 2004-11-04  Ben Elliston  <bje@gnu.org>
 
 	* lib/dg.exp (dg-test): If a `dg-do run' test fails to compile,
